--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,16 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.6.2</version> <!-- Thay bằng phiên bản bạn đang sử dụng -->
+        </dependency>
     </dependencies>
 
     <build>
